# python-qdrant-example

./: .gitignore  README.md  pyproject.toml
documents/: texto_extraido.txt
src/: gdsave.py  main.py  qdsearch.py  sec_pdf.py
src/core/: database.py  extractors.py  models.py
