[tool.poetry]
name = "python-qdrant"
version = "0.1.0"
description = ""
authors = ["Elson Silva <elsonjuniog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
qdrant-client = "^1.12.1"
sentence-transformers = "^3.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
