[tool.poetry]
name = "python-qdrant-example"
version = "0.1.0"
description = ""
authors = ["Elson Silva <elsonjuniog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qdrant-client = "^1.13.3"
pypdf2 = "^3.0.1"
speechrecognition = "^3.14.2"
sentence-transformers = "^4.0.2"
accelerate = "^1.6.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
